--- a/about.html
+++ b/about.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About | ittromaa</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>...</nav>
+
+  <section class="content">
+    <h1>About ittromaa</h1>
+    <p>ittromaa is a Canadian brand offering sustainable vegan leather handbags. Designed for elegance, crafted with care, and created for global citizens.</p>
+    <p>Currently available in the USA and Canada via Amazon, with expansion planned for India and beyond.</p>
+  </section>
+
+  <footer>...</footer>
+</body>
+</html>
