--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shop | Ittromaa</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>...</nav>
+
+  <section class="content">
+    <h1>Shop Our Collection</h1>
+    <div class="product-gallery">
+      <div class="product">
+        <img src="images/bag1.jpg" alt="Bag 1">
+        <p>Elegant Tote</p>
+        <a href="https://www.amazon.com/s?k=ittromaa" target="_blank">Buy Now</a>
+      </div>
+      <div class="product">
+        <img src="images/bag2.jpg" alt="Bag 2">
+        <p>Chic Crossbody</p>
+        <a href="https://www.amazon.ca/s?k=ittromaa" target="_blank">Buy Now</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>...</footer>
+</body>
+</html>
