--- a/lookbook.html
+++ b/lookbook.html
@@ -1,1 +1,27 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lookbook | ittromaa</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>...</nav>
+
+  <section class="content">
+    <h1>Lookbook</h1>
+    <div class="gallery">
+      <img src="images/model1.jpg" alt="Model 1">
+      <img src="images/model2.jpg" alt="Model 2">
+      <video controls>
+        <source src="videos/intro.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </section>
+
+  <footer>...</footer>
+</body>
+</html>
