--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact | ittromaa</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>...</nav>
+
+  <section class="content">
+    <h1>Contact Us</h1>
+    <p>Email: ttromaa@gmail.com</p>
+    <p>Follow us on Instagram: @ittromaa</p>
+  </section>
+
+  <footer>...</footer>
+</body>
+</html>
