--- a/index.html
+++ b/index.html
@@ -18,19 +18,49 @@
     </ul>
   </nav>
 
-  <header class="hero">
-    <div class="overlay">
-      <h1>Ittromaa</h1>
-      <p>Elegant Vegan Leather Handbags</p>
-      <div class="cta-buttons">
-        <a href="https://www.amazon.com/s?k=ittromaa" target="_blank">Shop USA</a>
-        <a href="https://www.amazon.ca/s?k=ittromaa" target="_blank">Shop Canada</a>
-      </div>
+  <!-- Slideshow -->
+  <section class="slideshow">
+    <div class="slide-track">
+      <img src="images/model1.jpg" alt="ittromaaBag1">
+      <img src="images/model2.jpg" alt="ittromaaBag2">
+      <img src="images/model3.jpg" alt="ittromaaBag3">
+      <img src="images/model4.jpg" alt="ittromaaBag4">
+      <img src="images/model5.jpg" alt="ittromaaBag5">
+      <img src="images/model6.jpg" alt="ittromaaBag6">
+      <img src="images/model7.jpg" alt="ittromaaBag7">
+      <img src="images/model8.jpg" alt="ittromaaBag8">
     </div>
-  </header>
+  </section>
+
+  <!-- Intro Section -->
+  <section class="content">
+    <h1 class="title">Unravel Your Inner Style</h1>
+    <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
+    <div class="cta-buttons">
+      <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa&ref=bl_sl_s_sh_web_7141123011" target="_blank">Shop on Amazon USA</a>
+      <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7/ref=sr_1_1?dib=eyJ2IjoiMSJ9.mR1u7UwzI8aH-coSQvfNeT8zhY-Gn77qPHjhX5pFOAg.Vj39VfjcGKLLU97KZEHoHiWatO_2F2iD5IyxnIFaEoI&dib_tag=se&qid=1753674051&refinements=p_4%3Aittromaa&s=shoes&sr=1-1&th=1" target="_blank">Shop on Amazon Canada</a>
+    </div>
+  </section>
+
+  <!-- Featured Products -->
+  <section class="product-gallery">
+    <h2>Featured Bags</h2>
+    <div class="product">
+      <img src="images/model1.jpg" alt="ittromaaBag1">
+      <p>Elegant Vegan Tote</p>
+    </div>
+    <div class="product">
+      <img src="images/model2.jpg" alt="ittromaaBag2">
+      <p>Minimalist Crossbody</p>
+    </div>
+    <div class="product">
+      <img src="images/model3.jpg" alt="ittromaaBag3">
+      <p>Chic Travel Bag</p>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2024-2025 ittromaa. All rights reserved.</p>
+    <p>&copy; @2024-2025 ittromaa. All rights reserved.</p>
   </footer>
 </body>
 </html>
