--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <!-- Intro Section -->
   <section class="content">
+    <h1 class="brand-name">ittromaa</h1>
     <h1 class="title">Unravel Your Inner Style</h1>
     <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
     <div class="cta-buttons">
