--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
   <!-- Intro Section -->
   <section class="content">
-    <h1 class="brand-name">ittromaa</h1>
+    <div class="brand-name">
+      <img src="images/ittromaa-logo.png" alt="ittromaa logo" />
+    </div>
     <h1 class="title">Unravel Your Inner Style</h1>
     <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
     <div class="cta-buttons">
@@ -61,7 +63,7 @@
   </section>
 
   <footer>
-    <p>&copy; @2024-2025 ittromaa. All rights reserved.</p>
+    <p>&copy; 2024-2025 ittromaa. All rights reserved.</p>
   </footer>
 </body>
 </html>
