--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Intro Section -->
   <section class="content">
     <div class="brand-name">
-      <img src="images/ittromaa-logo.png" alt="ittromaa logo" />
+      <img src="images/ittromaa-logo.jpg" alt="ittromaa logo" />
     </div>
     <h1 class="title">Unravel Your Inner Style</h1>
     <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
