--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
       <img src="images/model6.jpg" alt="ittromaaBag6" />
       <img src="images/model7.jpg" alt="ittromaaBag7" />
       <img src="images/model8.jpg" alt="ittromaaBag8" />
+      <!-- Repeat images for smooth infinite scroll -->
+      <img src="images/model1.jpg" alt="ittromaaBag1" />
+      <img src="images/model2.jpg" alt="ittromaaBag2" />
+      <img src="images/model3.jpg" alt="ittromaaBag3" />
+      <img src="images/model4.jpg" alt="ittromaaBag4" />
+      <img src="images/model5.jpg" alt="ittromaaBag5" />
+      <img src="images/model6.jpg" alt="ittromaaBag6" />
+      <img src="images/model7.jpg" alt="ittromaaBag7" />
+      <img src="images/model8.jpg" alt="ittromaaBag8" />
     </div>
   </section>
 
   <!-- Intro Section -->
   <section class="content">
-    <div class="brand-name">
-      <img src="images/ittromaa-logo.png" alt="ittromaa logo" />
-    </div>
+    <h1 class="brand-name">ittromaa</h1>
     <h1 class="title">Unravel Your Inner Style</h1>
     <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
     <div class="cta-buttons">
