--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ittromaa | Unravel Your Inner Style</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="lookbook.html">Lookbook</a></li>
@@ -29,15 +29,6 @@
       <img src="images/model6.jpg" alt="ittromaaBag6" />
       <img src="images/model7.jpg" alt="ittromaaBag7" />
       <img src="images/model8.jpg" alt="ittromaaBag8" />
-      <!-- Repeat images for smooth infinite scroll -->
-      <img src="images/model1.jpg" alt="ittromaaBag1" />
-      <img src="images/model2.jpg" alt="ittromaaBag2" />
-      <img src="images/model3.jpg" alt="ittromaaBag3" />
-      <img src="images/model4.jpg" alt="ittromaaBag4" />
-      <img src="images/model5.jpg" alt="ittromaaBag5" />
-      <img src="images/model6.jpg" alt="ittromaaBag6" />
-      <img src="images/model7.jpg" alt="ittromaaBag7" />
-      <img src="images/model8.jpg" alt="ittromaaBag8" />
     </div>
   </section>
 
@@ -47,8 +38,8 @@
     <h1 class="title">Unravel Your Inner Style</h1>
     <p>Ittromaa brings you timeless vegan leather handbags — crafted for elegance, designed in Canada, and made for the modern world.</p>
     <div class="cta-buttons">
-      <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa&ref=bl_sl_s_sh_web_7141123011" target="_blank" rel="noopener noreferrer">Shop on Amazon USA</a>
-      <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7/ref=sr_1_1?dib=eyJ2IjoiMSJ9.mR1u7UwzI8aH-coSQvfNeT8zhY-Gn77qPHjhX5pFOAg.Vj39VfjcGKLLU97KZEHoHiWatO_2F2iD5IyxnIFaEoI&dib_tag=se&qid=1753674051&refinements=p_4%3Aittromaa&s=shoes&sr=1-1&th=1" target="_blank" rel="noopener noreferrer">Shop on Amazon Canada</a>
+      <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa" target="_blank" rel="noopener noreferrer">Shop on Amazon USA</a>
+      <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7" target="_blank" rel="noopener noreferrer">Shop on Amazon Canada</a>
     </div>
   </section>
 
