--- a/faq.html
+++ b/faq.html
@@ -5,74 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FAQ | ittromaa</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    /* FAQ container flex */
-    .faq-container {
-      display: flex;
-      max-width: 1100px;
-      margin: 2rem auto;
-      gap: 3rem;
-      padding: 0 1rem;
-      align-items: flex-start;
-      flex-wrap: wrap;
-    }
-
-    /* FAQ list styles */
-    .faq-list {
-      flex: 1 1 550px;
-      text-align: left;
-    }
-
-    .faq-item {
-      margin-bottom: 2rem;
-    }
-
-    .faq-item h2 {
-      color: #b8860b; /* dark gold */
-      font-size: 1.4rem;
-      margin-bottom: 0.4rem;
-    }
-
-    .faq-item p {
-      font-size: 1rem;
-      color: #333;
-      line-height: 1.5;
-      margin: 0;
-    }
-
-    .faq-item a {
-      color: #b8860b;
-      text-decoration: underline;
-    }
-
-    .faq-item a:hover {
-      color: #000;
-      text-decoration: none;
-    }
-
-    /* Right side image */
-    .faq-image {
-      flex: 0 0 400px;
-      max-width: 400px;
-      border-radius: 10px;
-      object-fit: cover;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 100%;
-      height: auto;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-      .faq-container {
-        flex-direction: column;
-        align-items: center;
-      }
-      .faq-image {
-        max-width: 90%;
-        margin-top: 2rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <nav>
@@ -142,6 +74,8 @@
         </div>
       </div>
 
+      <!-- Replace src below with your own FAQ side image path -->
+      <img src="images/faq-side-image.jpg" alt="Ittromaa Handbag" class="faq-image" />
     </div>
   </section>
 
