--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us | ittromaa</title>
+  <title>Our Story</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Full page background with blur */
