--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <img src="images/model6.jpg" alt="ittromaaBag6" />
       <img src="images/model7.jpg" alt="ittromaaBag7" />
       <img src="images/model8.jpg" alt="ittromaaBag8" />
+      <img src="images/model9.jpg" alt="ittromaaBag8" />
+      <img src="images/model10.jpg" alt="ittromaaBag8" />
+
     </div>
   </section>
 
