--- a/about.html
+++ b/about.html
@@ -3,113 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Story</title>
+  <title>FAQ | Our Story </title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Full page background with blur */
-    body {
-      margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      color: #fff;
-      background: url('images/about-side-image.jpg') no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-      min-height: 100vh;
-    }
-
-    /* Overlay with blur */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.4); /* dark overlay for contrast */
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      z-index: 0;
-    }
-
-    nav {
-      position: relative; /* so it is above overlay */
-      background-color: rgba(184, 134, 11, 0.9); /* semi-transparent dark gold */
-      padding: 1rem;
-      z-index: 1;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 1.2rem;
-      margin: 0;
-      padding: 0;
-      flex-wrap: wrap;
-    }
-
     nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-      position: relative;
-      z-index: 2;
+      color: #fff !important;
     }
 
     nav a:hover {
-      color: #000;
+      color: #000 !important;
     }
 
     nav a.active {
+      color: #000 !important;
       text-decoration: underline;
-      color: #000;
     }
 
-    .content {
-      position: relative; /* so above overlay */
+    .faq-container {
       max-width: 900px;
-      margin: 4rem auto 3rem;
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.45); /* dark transparent box for readability */
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-      z-index: 1;
-      color: #f5f5dc; /* light beige */
-    }
-
-    .content h1 {
-      color: #f0c040; /* golden */
-      margin-bottom: 1rem;
-      font-size: 3rem;
-      font-weight: 800;
-      letter-spacing: 1.5px;
-      text-transform: lowercase;
-      text-align: center;
-    }
-
-    .content p {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      margin-bottom: 1.5rem;
+      margin: 3rem auto;
+      padding: 0 1rem;
       text-align: left;
+      color: #333;
     }
 
-    footer {
+    .faq-container h1 {
+      color: #b8860b;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
       text-align: center;
-      padding: 1rem;
-      background: rgba(0,0,0,0.7);
-      color: #ddd;
-      position: relative;
-      z-index: 1;
+      text-transform: lowercase;
+      letter-spacing: 1.2px;
+    }
+
+    .faq-item {
+      margin-bottom: 1.5rem;
+    }
+
+    .faq-item h3 {
+      color: #b8860b;
+      font-weight: 700;
+      margin-bottom: 0.3rem;
+    }
+
+    .faq-item p {
+      font-size: 1.1rem;
+      line-height: 1.5;
+      margin: 0;
+      color: #444;
     }
 
     /* Responsive */
-    @media (max-width: 768px) {
-      .content {
-        margin: 2rem 1rem;
-        padding: 1.5rem;
-      }
-
-      .content h1 {
-        font-size: 2.2rem;
+    @media (max-width: 600px) {
+      .faq-container {
+        padding: 0 1rem;
       }
     }
   </style>
@@ -118,28 +65,66 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="lookbook.html">Lookbook</a></li>
-      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="faq.html" class="active">FAQ</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <section class="content">
-    <h1>ittromaa</h1>
-    <p>
-      In the vibrant heart of Vancouver, Canada, during a sunny spring when flowers were bursting into bloom, Ittromaa was born. Inspired by the stunning colors of nature and the desire for fresh, modern style, our founder noticed a gap in the North American handbag market — a need for thoughtfully designed, elegant bags that reflected the spirit of today’s conscious, sophisticated woman.
-    </p>
-    <p>
-      What began as a simple idea soon blossomed into a passionate journey. From deep market research to understand what truly matters, to countless sketches capturing beauty and function in perfect harmony, every step was crafted with care. Designing each handbag with purpose and soul, we meticulously moved through sampling and collaboration with trusted manufacturers, always holding quality and ethics at the core.
-    </p>
-    <p>
-      Ittromaa isn’t just about handbags — it’s about empowering women with timeless pieces that celebrate style, sustainability, and innovation. Each bag reflects a commitment to excellence, vegan craftsmanship, and an enduring love for modern elegance.
-    </p>
-    <p>
-      Join us in unraveling your inner style — where beauty meets conscience, and every detail tells a story.
-    </p>
+  <section class="faq-container">
+    <h1>Frequently Asked Questions</h1>
+
+    <div class="faq-item">
+      <h3>Where to buy ittromaa products?</h3>
+      <p>You can purchase our handbags on <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa" target="_blank" rel="noopener noreferrer">Amazon USA</a> and <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7" target="_blank" rel="noopener noreferrer">Amazon Canada</a>.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>What is the material and quality of ittromaa bags?</h3>
+      <p>Our bags are made from the highest quality microfiber material, lined with soft cotton fabric, and equipped with top-quality hardware. We ensure that every bag is durable and long-lasting.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>What is the return policy?</h3>
+      <p>All items can be returned in accordance with Amazon’s return policy.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How are ittromaa bags better than others?</h3>
+      <p>Our bags are designed in-house in Canada with great attention to detail, a focus on quality, and without using any animal products.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Why choose vegan handbags?</h3>
+      <p>Choosing vegan handbags supports animal welfare, reduces environmental impact, and offers stylish, cruelty-free alternatives without compromising on quality or elegance.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Are the bags waterproof?</h3>
+      <p>Our microfiber material offers a high degree of water resistance, making the bags suitable for everyday use in various weather conditions.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Do you offer international shipping?</h3>
+      <p>Currently, we ship within the USA and Canada via Amazon. For other locations, please check Amazon’s international shipping options.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How to care for my ittromaa handbag?</h3>
+      <p>We recommend wiping the bag with a damp cloth and avoiding harsh chemicals to maintain its beauty and longevity.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Are ittromaa bags ethically made?</h3>
+      <p>Yes, we carefully select manufacturers who share our values for ethical and sustainable production.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can I track my order?</h3>
+      <p>Yes, orders placed through Amazon come with tracking information for your convenience.</p>
+    </div>
   </section>
 
   <footer>
