--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FAQ | ittromaa</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    nav a {
+      color: #fff !important;
+    }
+
+    nav a:hover {
+      color: #000 !important;
+    }
+
+    nav a.active {
+      color: #000 !important;
+      text-decoration: underline;
+    }
+
+    .faq-container {
+      max-width: 900px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+      text-align: left;
+      color: #333;
+    }
+
+    .faq-container h1 {
+      color: #b8860b;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      text-align: center;
+      text-transform: lowercase;
+      letter-spacing: 1.2px;
+    }
+
+    .faq-item {
+      margin-bottom: 1.5rem;
+    }
+
+    .faq-item h3 {
+      color: #b8860b;
+      font-weight: 700;
+      margin-bottom: 0.3rem;
+    }
+
+    .faq-item p {
+      font-size: 1.1rem;
+      line-height: 1.5;
+      margin: 0;
+      color: #444;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .faq-container {
+        padding: 0 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -18,63 +73,57 @@
     </ul>
   </nav>
 
-  <section class="content">
-    <h1 class="title">Frequently Asked Questions</h1>
+  <section class="faq-container">
+    <h1>Frequently Asked Questions</h1>
 
-    <div class="faq-container">
-      <div class="faq-list">
-        <div class="faq-item">
-          <h2>Where to buy ittromaa products?</h2>
-          <p>You can purchase ittromaa bags conveniently on <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa" target="_blank" rel="noopener noreferrer">Amazon USA</a> and <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7" target="_blank" rel="noopener noreferrer">Amazon Canada</a>.</p>
-        </div>
+    <div class="faq-item">
+      <h3>Where to buy ittromaa products?</h3>
+      <p>You can purchase our handbags on <a href="https://www.amazon.com/s?rh=n%3A7141123011%2Cp_4%3Aittromaa" target="_blank" rel="noopener noreferrer">Amazon USA</a> and <a href="https://www.amazon.ca/ittromaa-Timeless-Shoulder-Top-Handle-Crossbody/dp/B0DD2M8HH7" target="_blank" rel="noopener noreferrer">Amazon Canada</a>.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>What is the material and quality of ittromaa bags?</h2>
-          <p>Our bags are crafted from the highest quality microfiber material with a soft cotton lining and premium hardware. Designed for durability, ittromaa bags are long-lasting while maintaining an elegant look.</p>
-        </div>
+    <div class="faq-item">
+      <h3>What is the material and quality of ittromaa bags?</h3>
+      <p>Our bags are made from the highest quality microfiber material, lined with soft cotton fabric, and equipped with top-quality hardware. We ensure that every bag is durable and long-lasting.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>What is the return policy?</h2>
-          <p>All ittromaa products are eligible for return according to Amazon’s return policy. Please refer to Amazon’s official return guidelines for detailed instructions.</p>
-        </div>
+    <div class="faq-item">
+      <h3>What is the return policy?</h3>
+      <p>All items can be returned in accordance with Amazon’s return policy.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>How are ittromaa bags better than others?</h2>
-          <p>Every ittromaa bag is designed in-house in Canada with meticulous attention to detail. We focus on quality materials and craftsmanship, and all our products are 100% vegan, with no use of animal-derived materials.</p>
-        </div>
+    <div class="faq-item">
+      <h3>How are ittromaa bags better than others?</h3>
+      <p>Our bags are designed in-house in Canada with great attention to detail, a focus on quality, and without using any animal products.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>Why choose vegan?</h2>
-          <p>Choosing vegan products means supporting cruelty-free fashion that does not rely on animal materials. Vegan bags from ittromaa provide a sustainable, ethical alternative without compromising on style, quality, or durability—helping protect animals and reduce environmental impact.</p>
-        </div>
+    <div class="faq-item">
+      <h3>Why choose vegan handbags?</h3>
+      <p>Choosing vegan handbags supports animal welfare, reduces environmental impact, and offers stylish, cruelty-free alternatives without compromising on quality or elegance.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>Are ittromaa bags waterproof or water-resistant?</h2>
-          <p>Our microfiber material offers a degree of water resistance, helping protect your bag from light rain and spills. However, we recommend avoiding heavy exposure to water to maintain the bag’s quality.</p>
-        </div>
+    <div class="faq-item">
+      <h3>Are the bags waterproof?</h3>
+      <p>Our microfiber material offers a high degree of water resistance, making the bags suitable for everyday use in various weather conditions.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>How do I care for and clean my ittromaa bag?</h2>
-          <p>To keep your bag looking new, wipe it gently with a damp cloth and mild soap when needed. Avoid harsh chemicals or soaking the bag. For stubborn stains, spot clean and allow it to air dry naturally.</p>
-        </div>
+    <div class="faq-item">
+      <h3>Do you offer international shipping?</h3>
+      <p>Currently, we ship within the USA and Canada via Amazon. For other locations, please check Amazon’s international shipping options.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>Do you offer warranties on ittromaa products?</h2>
-          <p>We stand behind the quality of our bags. Please check the product details or contact us directly for information about warranty coverage and support.</p>
-        </div>
+    <div class="faq-item">
+      <h3>How to care for my ittromaa handbag?</h3>
+      <p>We recommend wiping the bag with a damp cloth and avoiding harsh chemicals to maintain its beauty and longevity.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>Can I find ittromaa bags in physical retail stores?</h2>
-          <p>Currently, ittromaa bags are primarily sold online through Amazon USA and Amazon Canada. We’re exploring retail partnerships and will update customers when new locations become available.</p>
-        </div>
+    <div class="faq-item">
+      <h3>Are ittromaa bags ethically made?</h3>
+      <p>Yes, we carefully select manufacturers who share our values for ethical and sustainable production.</p>
+    </div>
 
-        <div class="faq-item">
-          <h2>Are ittromaa bags suitable for everyday use?</h2>
-          <p>Absolutely! Our bags are designed for durability and style, perfect for everyday wear whether you’re heading to work, errands, or social outings.</p>
-        </div>
-      </div>
-
-      <!-- Replace src below with your own FAQ side image path -->
+    <div class="faq-item">
+      <h3>Can I track my order?</h3>
+      <p>Yes, orders placed through Amazon come with tracking information for your convenience.</p>
     </div>
   </section>
 
