--- a/contact.html
+++ b/contact.html
@@ -132,5 +132,11 @@
   <footer>
     <p>&copy; 2024-2025 ittromaa. All rights reserved.</p>
   </footer>
+
+  <!-- Visitor Tracking Script -->
+  <script src="https://cdn.counter.dev/script.js"
+    data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c"
+    data-utcoffset="-4">
+  </script>
 </body>
 </html>
