--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FAQ | ittromaa</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Visitor Counter Script -->
+  <script src="https://cdn.counter.dev/script.js" data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" data-utcoffset="-4"></script>
+
   <style>
     nav a {
       color: #fff !important;
@@ -32,7 +35,7 @@
       font-size: 2.5rem;
       margin-bottom: 2rem;
       text-align: center;
-      text-transform: lowercase;
+      text-transform: none; /* changed from lowercase */
       letter-spacing: 1.2px;
     }
 
