--- a/about.html
+++ b/about.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our Story</title>
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Counter.dev Tracking Script -->
+  <script src="https://cdn.counter.dev/script.js" 
+          data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" 
+          data-utcoffset="-4"></script>
+
   <style>
     /* Full page background with blur */
     body {
@@ -22,15 +28,15 @@
       content: "";
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.4); /* dark overlay for contrast */
+      background: rgba(0, 0, 0, 0.4);
       backdrop-filter: blur(6px);
       -webkit-backdrop-filter: blur(6px);
       z-index: 0;
     }
 
     nav {
-      position: relative; /* so it is above overlay */
-      background-color: rgba(184, 134, 11, 0.9); /* semi-transparent dark gold */
+      position: relative;
+      background-color: rgba(184, 134, 11, 0.9);
       padding: 1rem;
       z-index: 1;
     }
@@ -64,20 +70,20 @@
     }
 
     .content {
-      position: relative; /* so above overlay */
+      position: relative;
       max-width: 900px;
       margin: 4rem auto 3rem;
       padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.45); /* dark transparent box for readability */
+      background-color: rgba(0, 0, 0, 0.45);
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.5);
       z-index: 1;
-      color: #f5f5dc; /* light beige */
+      color: #f5f5dc;
       text-align: left;
     }
 
     .content h1 {
-      color: #f0c040; /* golden */
+      color: #f0c040;
       margin-bottom: 1rem;
       font-size: 3rem;
       font-weight: 800;
@@ -101,7 +107,6 @@
       z-index: 1;
     }
 
-    /* Responsive */
     @media (max-width: 768px) {
       .content {
         margin: 2rem 1rem;
