--- a/index.html
+++ b/index.html
@@ -5,6 +5,154 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ittromaa | Unravel Your Inner Style</title>
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Counter.dev Tracking Script -->
+  <script src="https://cdn.counter.dev/script.js" 
+          data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" 
+          data-utcoffset="-4"></script>
+
+  <style>
+    /* Page background */
+    body {
+      background-color: #f7f7f7; /* off-white/silver */
+    }
+
+    /* Navigation */
+    nav {
+      background-color: #b8860b; /* golden color */
+      padding: 1rem 0;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 0;
+      padding: 0;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      color: #fff;
+      font-weight: bold;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #000;
+    }
+
+    nav a.active {
+      text-decoration: underline;
+      color: #000;
+    }
+
+    /* Brand and slogan */
+    .brand-name {
+      font-size: 4rem;
+      font-weight: 800;
+      letter-spacing: 2px;
+      color: #b8860b;
+      margin-bottom: 0.3rem;
+      text-align: center;
+      text-transform: lowercase;
+    }
+
+    .title {
+      color: #b8860b;
+      font-size: 2rem;
+      text-align: center;
+      margin: 0 0 1rem;
+      text-transform: none;
+    }
+
+    /* Slideshow styling */
+    .slideshow {
+      overflow: hidden;
+      margin: 0 auto 3rem;
+      max-width: 100%;
+      background-color: #fdfdfd;
+      padding: 2rem 0;
+    }
+
+    .slide-track {
+      display: flex;
+      animation: scroll 25s linear infinite;
+      gap: 2rem;
+    }
+
+    .slide-track img {
+      height: 220px;
+      border-radius: 10px;
+      object-fit: cover;
+      user-select: none;
+      pointer-events: none;
+    }
+
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+
+    /* CTA Buttons */
+    .cta-buttons a {
+      background: #000;
+      color: #fff;
+      padding: 0.8rem 1.2rem;
+      margin: 0.5rem;
+      border-radius: 5px;
+      text-decoration: none;
+      display: inline-block;
+      font-weight: bold;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .cta-buttons a:hover {
+      background: #f0c040;
+      color: #000;
+    }
+
+    /* Product Gallery */
+    .product-gallery {
+      text-align: center;
+      padding: 2rem;
+    }
+
+    .product-gallery h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      color: #222;
+    }
+
+    .product {
+      display: inline-block;
+      margin: 1rem;
+    }
+
+    .product img {
+      width: 200px;
+      border-radius: 10px;
+      user-select: none;
+    }
+
+    .product p {
+      margin-top: 0.5rem;
+      font-weight: 600;
+      color: #333;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #f5f5f5;
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: 3rem;
+    }
+  </style>
 </head>
 <body>
   <nav>
